# stock-analyzer

./: .gitignore  Dockerfile.app  LICENSE  README.md  pyproject.toml  taskfile.sh
src/: app.py  cloud_storage.py  main.py  utils.py
